Add `--add-modules=jdk.incubator.vector` JVM flag and comment out access restriction middleware