@@ -54,7 +54,12 @@ jib {
     }
     container {
         mainClass = "me.centralhardware.znatoki.telegram.statistic.MainKt"
-        jvmFlags = listOf("-XX:+UseContainerSupport", "-XX:MaxRAMPercentage=75.0", "--add-opens=java.base/java.lang=ALL-UNNAMED")
+        jvmFlags = listOf(
+            "-XX:+UseContainerSupport",
+            "-XX:MaxRAMPercentage=75.0",
+            "--add-opens=java.base/java.lang=ALL-UNNAMED",
+            "--add-modules=jdk.incubator.vector"
+        )
         creationTime = "USE_CURRENT_TIMESTAMP"
         labels = mapOf(
             "org.opencontainers.image.source" to (System.getenv("GITHUB_SERVER_URL")?.let { server ->
